--- a/templates/PantryPal_app/index.html
+++ b/templates/PantryPal_app/index.html
@@ -5,33 +5,33 @@
 
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<title>PantryPal</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="">
-<meta name="author" content="">
-<!-- Le styles -->
-<link href="{% static "css/bootstrap.css" %}" rel="stylesheet">
-<link href="{% static "css/bootstrap-responsive.css" %}" rel="stylesheet">
-<link href="{% static "css/pricing.css" %}" rel="stylesheet">
-<!-- !important THIS STYLE CSS ON BOTTOM OF STYLEs LIST-->
-<link href="{% static "css/style.css" %}" rel="stylesheet">
-<!-- !important THIS STYLE CSS ON BOTTOM OF STYLEs LIST-->
-<link href="{% static "css/font-awesome.min.css" %}" rel="stylesheet"> 
-<link href="{% static "css/prettyPhoto.css" %}" rel="stylesheet" type="text/css" />
-<link href="{% static "js/google-code-prettify/prettify.css" %}" rel="stylesheet">
-<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+	<meta charset="utf-8">
+	<title>PantryPal</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="">
+	<meta name="author" content="Brent Shulman">
+	<!-- Le styles -->
+	<link href="{% static "css/bootstrap.css" %}" rel="stylesheet">
+	<link href="{% static "css/bootstrap-responsive.css" %}" rel="stylesheet">
+	<link href="{% static "css/pricing.css" %}" rel="stylesheet">
+	<!-- !important THIS STYLE CSS ON BOTTOM OF STYLEs LIST-->
+	<link href="{% static "css/style.css" %}" rel="stylesheet">
+	<!-- !important THIS STYLE CSS ON BOTTOM OF STYLEs LIST-->
+	<link href="{% static "css/font-awesome.min.css" %}" rel="stylesheet"> 
+	<link href="{% static "css/prettyPhoto.css" %}" rel="stylesheet" type="text/css" />
+	<link href="{% static "js/google-code-prettify/prettify.css" %}" rel="stylesheet">
+	<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
-<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-<!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-<!-- Le fav and touch icons -->
-<link rel="shortcut icon" href="{% static "ico/favicon.ico" %}">
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="{% static "ico/apple-touch-icon-144-precomposed.png" %}">
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="{% static "ico/apple-touch-icon-114-precomposed.png" %}">
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="{% static "ico/apple-touch-icon-72-precomposed.png" %}">
-<link rel="apple-touch-icon-precomposed" href="{% static "ico/apple-touch-icon-57-precomposed.png" %}">
+	<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+	<!--[if lt IE 9]>
+	      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	    <![endif]-->
+	<!-- Le fav and touch icons -->
+	<link rel="shortcut icon" href="{% static "ico/favicon.ico" %}">
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="{% static "ico/apple-touch-icon-144-precomposed.png" %}">
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="{% static "ico/apple-touch-icon-114-precomposed.png" %}">
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="{% static "ico/apple-touch-icon-72-precomposed.png" %}">
+	<link rel="apple-touch-icon-precomposed" href="{% static "ico/apple-touch-icon-57-precomposed.png" %}">
 </head>
 <body data-spy="scroll" data-target=".scroller-spy" data-twttr-rendered="true">
 
