Changes to the index page for the PantryPal_app

--- a/templates/PantryPal_app/index.html
+++ b/templates/PantryPal_app/index.html
@@ -49,7 +49,7 @@
       <!-- navbar-fixed-top -->
       <div class="navbar-inner" id="navbartop">
         <div class="container"> <a class="brand" href="index.html"> 
-		<span><i class="fa-icon-circle-arrow-down"></i> SCROLL&amp;STRAP</span>
+		<span>PantryPal</span>
 		<!--<img src="{% static "img/Logo.png" %}" alt="Logo">--></a>
           <div id="main-nav" class="scroller-spy">
             <nav class="nav-collapse collapse" >
@@ -93,8 +93,8 @@
 					
 						<h1 class="text-center main-color"> 
 							
-						<span>MODERN PARALLAX ONEPAGER<!--INTRODUCING SCROLL&amp;STRAP!--></span>
-							<span class="visible-desktop">MODERN PARALLAX ONE PAGE  TEMPLATE BUILD ON BOOTSRAP 2.3.0</span>
+						<span>PANTRY PAL</span>
+							<span class="visible-desktop">Helping you decide what to make and how to make it</span>
 						
 							
 						</h1>
@@ -125,7 +125,7 @@
 				<div class="text-center page-header">
 					<h3 class="">
 						<span class="white"><!-- WHITE SPACE-->
-							WHAT WE ARE <span class="main-color">OFFER</span> 
+							WHAT WE <span class="main-color">OFFER</span> 
 						</span>	
 					</h3>
 				</div>
