--- a/templates/PantryPal_app/base.html
+++ b/templates/PantryPal_app/base.html
@@ -95,6 +95,13 @@
 							
 						<span>PANTRY PAL</span>
 							<span class="visible-desktop">Helping you decide what to make and how to make it</span>
+							<form class="form-signin span8" id="user_form" method="POST" action="/PantryPal_app/">
+            					{% csrf_token %}
+					            <!-- Display the search form elements here -->
+					            <input type="text" size="50" name="query" value="" id="query" />
+					            <span id="form_submit"><a href="#features-section" onClick="$(this).closest('form').submit();">Submit</a></span>
+					            <br />
+					        </form>
 						
 							
 						</h1>
@@ -133,57 +140,11 @@
 			</header>
 		</div>
 </div><!-- /SERVICE HEADER-->
-	<div class="container">
+	<div id="search_content" class="container">
 		<div class="row-fluid">
+			<i id="spinner" class="fa-icon-spinner fa-icon-spin fa-icon-large " style="text-align:center; display:block;"></i>
 
-			<div>
-            {% block body_block %}Defualt shit{% endblock %}
-        	</div>
-
-		<!-- FEATURE ITEM-->
-			<div class="span3 effect-box-1">
-				<span class="label label-warning lines-bg-color text-center">
-								<i class="fa-icon-fullscreen fa-icon-large"></i>
-				</span>
-				<h4 class="features-title"> 
-					<span class="main-color">Responsive</span> Layout
-				</h4>
-				<p class=""> We combine creative forces with systematic activists. All ideas require implementation and our multi-disciplined netproject fosters a wide array of abilities that empower visionaries and entrepreneurs to lead meaningful brands.</p>
-	</div><!-- END FEATURE ITEM-->
-		
-		
-		<!-- FEATURE ITEM-->
-		<div class="span3 effect-box-2">
-			<span class="label label-warning lines-bg-color text-center">
-			<i class="fa-icon-tint fa-icon-large"></i>
-			</span>
-			<h4 class="features-title"> 
-				<span class="main-color">Designer  </span>Friendly
-			</h4>
-			<p class=""> We combine creative forces with systematic activists. All ideas require implementation and our multi-disciplined netproject fosters a wide array of abilities that empower visionaries and entrepreneurs to lead meaningful brands.</p>
-		</div><!-- END FEATURE ITEM-->
-		
-		<!-- FEATURE ITEM-->
-		<div class="span3 effect-box-3"> 
-			<span class="label label-warning lines-bg-color text-center">
-			<i class="fa-icon-thumbs-up fa-icon-large"></i>
-			</span>
-			<h4 class="features-title"> 
-				<span class="main-color">Faster</span> Setup
-			</h4>
-			<p class=""> Inspired Thinking. Ask smarter questions, push for innovative solutions and believe in the power of creativity. Be consistently open and honest. Be true to ourselves and our values. Find, stimulate and maintain the best minds.</p>
-		</div>
-		<!-- END FEATURE ITEM-->
-		<!-- FEATURE ITEM-->
-		<div class="span3 effect-box-4"> 
-			<span class="label label-warning lines-bg-color text-center">
-			<i class="fa-icon-spinner fa-icon-spin fa-icon-large "></i>
-			</span>
-			<h4 class="features-title">
-				<span class="main-color">Modern</span> features
-			</h4>
-			<p class=""> Inspired Thinking. Ask smarter questions, push for innovative solutions and believe in the power of creativity. Be consistently open and honest. Be true to ourselves and our values. Find, stimulate and maintain the best minds.</p>
-		</div>
+		<!-- SEARCH CONTENT WILL GO HERE -->
 		<!-- FEATURE ITEM-->
 		</div><!--/ ROW-FLUID-->
 		<hr/>
@@ -1024,10 +985,13 @@
 <script type="text/javascript" src="{% static "js/jquery.gmap.js" %}"></script>
 <!-- gMap PLUGIN -->
 <script src="{% static "js/custom.js" %}" type="text/javascript"></script>
+<!-- AJAX plugin to load search content -->
+<script src="{% static "js/PantryPal-ajax.js" %}"></script>
 
 <script type="text/javascript">
 jQuery(document).ready(function(){
 	jQuery('#nav').localScroll(1000);
+	jQuery('#form_submit').localScroll();
 	jQuery('#nav2').localScroll(1000);
 	jQuery('#nav3').localScroll(1000);
 	jQuery('#nav4').localScroll(1000);
@@ -1212,6 +1176,16 @@ jQuery('#header-section').bind('inview', function (event, visible) {
 		</script>
 		<script>
 			jQuery('.carousel').carousel()
+		</script>
+		<!-- Loads content on enter press -->
+		<script>
+			$(document).keypress(function(e) {
+			    if ((e.keyCode || e.which) == 13) {
+			        // Enter key pressed
+			        $('#form_submit').click();
+			        $('#features-section').scroll();
+			    }
+			});
 		</script>
 </body>
 </html>
