--- a/templates/PantryPal_app/index.html
+++ b/templates/PantryPal_app/index.html
@@ -4,13 +4,6 @@
 
 {% block body_block %}
     <!-- testing search functionality -->
-        <form class="form-signin span8" id="user_form" method="POST" action="/PantryPal_app/">
-            {% csrf_token %}
-            <!-- Display the search form elements here -->
-            <input type="text" size="50" name="query" value="" id="query" />
-            <input class="btn btn-primary" type="submit" name="submit" value="Search" />
-            <br />
-        </form>
 
         {% if result_list %}
         <!-- Display search results in an ordered list -->
@@ -18,8 +11,7 @@
             <ol>
             {% for result in result_list %}
                 <li>
-                    <strong><a href="{{ result.sourceRecipeUrl }}">{{ result.recipeName }}</a></strong><br />
-                    <em>{{ result.summary }}</em>
+                    <strong><a href="{{ result.smallImageUrls }}">{{ result.recipeName }}</a></strong><br />
                 </li>
             {% endfor %}
             </ol>
