--- a/templates/PantryPal_app/search.html
+++ b/templates/PantryPal_app/search.html
@@ -3,9 +3,9 @@
 <div class="row-fluid">
 
     {% for result in result_list %}
-    <div class="span3 effect-box-1">
+    <div class="span3 effect-box-1 active">
         <span class="label label-warning lines-bg-color text-center" style="padding: 0px;">
-            <img src="{{ result.imageUrlsBySize.90 }}" style="min-width: 100%">
+            <img src="{{ result.imageUrlsBySize.90 }}" style="min-width: 100%; border-radius: 30px;">
         </span>
         <h4 class="features-title" style="text-align: center;"> 
             {{ result.recipeName }}
@@ -17,7 +17,7 @@
     </div>
     <div class="row-fluid">
     {% endif %}
-    
+
     {% endfor %}
 
 {% endif %}
