Changed nav bar and edited recipes sections

--- a/templates/PantryPal_app/base.html
+++ b/templates/PantryPal_app/base.html
@@ -55,7 +55,7 @@
             <nav class="nav-collapse collapse" >
               <ul class="nav" id="nav">
                 <li class="active"><a href="#header-section">Home</a> </li>
-				<li><a href="#features-section">Service</a> </li>
+				<li><a href="#features-section">Recipes</a> </li>
 				<li><a href="#team-section">About us</a> </li>
 				<li><a href="#portfolio-section">Works</a> </li>
 				<li><a href="#price-section">Price</a> </li>
@@ -117,60 +117,32 @@
 			
 </section><!--/ TOP SECTION-->
 
-<!-- /SERVICE SECTION-->			
-<section  id="features-section" class="section-2">
+<!-- /RECIPES SECTION-->			
+<section  id="features-section" class="section-2" style="min-height: 0px; ">
 	<div class="bg-wraper parallax-point-event">
-	<div class="container">
-		<div class="row-fluid">
+		<div class="container">
+			<div class="row-fluid">
 
-	<!-- PROJECTS HEADER-->
-			<header class="" >
-				<div class="text-center page-header">
-					<h3 class="">
-						<span class="white"><!-- WHITE SPACE-->
-							WHAT WE <span class="main-color">OFFER</span> 
-						</span>	
-					</h3>
-				</div>
-			</header>
-		</div>
-</div><!-- /SERVICE HEADER-->
-	<div id="search_content" class="container">
-		<div class="row-fluid">
-			<i id="spinner" class="fa-icon-spinner fa-icon-spin fa-icon-large " style="text-align:center; display:block;"></i>
-
-		<!-- SEARCH CONTENT WILL GO HERE -->
-		<!-- FEATURE ITEM-->
-		</div><!--/ ROW-FLUID-->
-		<hr/>
-	
-	
-	<div class="row-fluid">
-		<div class="well">
-			<div class="well-wrapp">
-				<p class="lead text-large text-center">
-					
-						<span class="main-color"> 
-							Scroll&amp;Strap
-						</span> - modern Bootstrap onepager with parallax effect and smooth scrolling
-				</p>
-	<span class="btn-box">				
-		<a href="#" class="btn btn-icon-large  btn-large  btn-action btn-block-third">
-		<i class="fa-icon-download-alt fa-icon-large"></i> 
-		Buy now!
-		</a>
-			<i class="or">- or - </i>
-			<span id="nav3">
-				<a href="#slogan-section-2" class="btn btn-icon-large  btn-large  btn-green-alt btn-block-third"><i class="fa-icon-info-sign fa-icon-large"></i> Show me more!</a>
-			</span>
-	</span>
-				
-				</div>	
+		<!-- PROJECTS HEADER-->
+				<header class="" >
+					<div class="text-center page-header">
+						<h1 class="">
+							<span class="white"><!-- WHITE SPACE-->
+								YOUR <span class="main-color">RECIPES</span> 
+							</span>	
+						</h1>
+					</div>
+				</header>
 			</div>
-		</div><!-- /row-fluid-->
-	</div><!--/CONTAINER-->
-</div><!-- / BG WRAPER-->
+		</div>
 
+		<!-- /RECIPES HEADER-->
+		<div id="search_content" class="container">
+			<!-- SEARCH CONTENT WILL GO HERE -->
+			<a href="#header-section">Seach something up above!</a>
+			<hr/>
+		</div><!--/CONTAINER-->
+	</div><!-- / BG WRAPER-->
 </section>
 	
 	<!-- /FEATURE section-->
