--- a/templates/PantryPal_app/search.html
+++ b/templates/PantryPal_app/search.html
@@ -1,6 +1,7 @@
-{% if result_list %}
+
 <!-- Display search results in an ordered list -->
 <div class="row-fluid">
+{% if result_list %}
 
     {% for result in result_list %}
     <div class="span3 effect-box-1 active">
@@ -12,12 +13,31 @@
         </h4>
         <!-- <p class=""> We combine creative forces with systematic activists. All ideas require implementation and our multi-disciplined netproject fosters a wide array of abilities that empower visionaries and entrepreneurs to lead meaningful brands.</p> -->
     </div><!-- END FEATURE ITEM-->
-    <!-- {# if the the forloop counter is divisible by 4, close the <li> tag and open a new one #} -->
+    <!-- {# if the the forloop counter is divisible by 4, close the <div> tag and open a new one #} -->
     {% if forloop.counter|divisibleby:4 %}
     </div>
     <div class="row-fluid">
     {% endif %}
 
     {% endfor %}
-
+{% else %}
+    <div class="well">
+        <div class="well-wrapp">
+            <p class="lead text-large text-center">
+                Sorry! we cant find anything that includes all those ingredients.<br>Give it another try!
+            </p>
+<span class="btn-box">              
+    <a href="#" class="btn btn-icon-large  btn-large  btn-action btn-block-third">
+    <i class="fa-icon-download-alt fa-icon-large"></i> 
+    Buy now!
+    </a>
+        <i class="or">- or - </i>
+        <span id="nav3">
+            <a href="#header-section" class="btn btn-icon-large  btn-large  btn-green-alt btn-block-third"><i class="fa-icon-info-sign fa-icon-large"></i> Back to Top</a>
+        </span>
+</span>
+            
+            </div>  
+        </div>
+    </div><!-- /row-fluid-->
 {% endif %}
