updated index.html view

--- a/templates/PantryPal_app/base.html
+++ b/templates/PantryPal_app/base.html
@@ -139,7 +139,7 @@
 		<!-- /RECIPES HEADER-->
 		<div id="search_content" class="container">
 			<!-- SEARCH CONTENT WILL GO HERE -->
-			<a href="#header-section">Seach something up above!</a>
+			{% block body_block %}<a href="#header-section">Seach something up above!</a>{% endblock %}
 			<hr/>
 		</div><!--/CONTAINER-->
 	</div><!-- / BG WRAPER-->
