--- a/templates/PantryPal_app/base.html
+++ b/templates/PantryPal_app/base.html
@@ -92,7 +92,7 @@
             					{% csrf_token %}
 					            <!-- Display the search form elements here -->
 					            <br>
-					            <input type="text" size="50" name="query" value="" placeholder="Search recipes..." id="query" style="width: 30%; height: 40px; "/>
+					            <input type="text" size="50" name="query" value="" placeholder="Search recipes with your ingredients..." id="query" style="width: 30%; height: 40px; "/>
 					            <br>
 					            <span id="form_submit"><a href="#features-section" style="display:none; "onClick="$(this).closest('form').submit();">Submit</a></span>
 					            <br />
