removed init maxTime value
This will be fixed in the backend view for PantryPal_app/search/

--- a/templates/PantryPal_app/base.html
+++ b/templates/PantryPal_app/base.html
@@ -94,7 +94,7 @@
 					            <br>
 					            <input type="text" size="50" name="query" value="" placeholder="Search recipes with your ingredients..." id="query" style="width: 30%; height: 40px; ">
 					            <br>
-					            <input type="text" size="60" name="time" value="60" placeholder="How long are you looking to spend?" id="time" style="width: 30%; height: 40px; ">
+					            <input type="text" size="60" name="time" value="" placeholder="How long are you looking to spend?" id="time" style="width: 30%; height: 40px; ">
 					            <br>
 					            <span id="form_submit"><a href="#features-section" style="display:none;" onClick="$(this).closest('form').submit();">Submit</a></span>
 					            <br />
