--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,6 +24,7 @@ CUSTOM BUTTONS.............................1157
 	- CUSTOM BUTTONS SIZES.................1413
 PARALLAX EFFECTS...........................1474
 @MEDIA.....................................1642
+FORM.......................................1785
 
 
 *****************************************************************/
@@ -711,6 +712,30 @@ PARALLAX EFFECTS...........................1474
 	    -moz-box-shadow: 0 2px 15px 0 rgba(0,0,0,.6);
 	    -webkit-box-shadow: 0 2px 15px 0 rgba(0,0,0,.6);
 	    box-shadow: 0 2px 15px 0 rgba(0,0,0,.6);
+	}
+
+	.label:hover .needed{
+	    /*background: #fff;*/
+	   /* -moz-border-radius: 6px;
+	    -webkit-border-radius: 6px;
+	    border-radius: 6px;*/
+	    display: inline-block;
+	}
+
+	.label .needed {
+		background: url(../img/logo-bg.png) top left no-repeat;
+        z-index: 1;
+        background-size: 100%;
+        position: absolute;
+        width: 20%;
+        height: 40px;
+        margin-top: 25px;
+        text-align: center;
+        display: none;
+	}
+
+	.label .needed p {
+		display: inline-block;
 	}
 
 	i.fa-icon-large{
@@ -1756,4 +1781,129 @@ PARALLAX EFFECTS...........................1474
 					font-size: 200%;
 					line-height: 35px;
 					}
-			}			
+			}
+
+
+/*********************** FORM *****************************/
+form .get_recipes {
+	width: 30%;
+	height: 40px;
+	min-width: 300px;
+    background: transparent;
+    background: rgba(57, 46, 34, 0.52);
+    background-clip: padding-box;
+    
+    border: none;
+    border-radius:         26px;
+    -moz-border-radius:    26px;
+    -o-border-radius:      26px;
+    -webkit-border-radius: 26px;
+    
+    box-shadow:         inset 0 0 5px rgba(0, 0, 0, 0.1), 
+                        0 1px 0 rgba(255, 255, 255, 0.5), 
+                        inset 0 1px 2px rgba(0, 0, 0, 0.3), 
+                        0 0 40px rgba(255, 255, 255, 0.3);
+    -moz-box-shadow:    inset 0 0 5px rgba(0, 0, 0, 0.1), 
+                        0 1px 0 rgba(255, 255, 255, 0.5), 
+                        inset 0 1px 2px rgba(0, 0, 0, 0.3), 
+                        0 0 40px rgba(255, 255, 255, 0.3);
+    -o-box-shadow:      inset 0 0 5px rgba(0, 0, 0, 0.1), 
+                        0 1px 0 rgba(255, 255, 255, 0.5), 
+                        inset 0 1px 2px rgba(0, 0, 0, 0.3), 
+                        0 0 40px rgba(255, 255, 255, 0.3);
+    -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1), 
+                        0 1px 0 rgba(255, 255, 255, 0.5), 
+                        inset 0 1px 2px rgba(0, 0, 0, 0.3), 
+                        0 0 40px rgba(255, 255, 255, 0.3);
+    
+    color: #333;
+    outline: none;
+
+    transition:         all .1s linear;
+    -moz-transition:    all .1s linear;
+    -o-transition:      all .1s linear;
+    -webkit-transition: all .1s linear;
+
+    text-align: center;
+    font-size: 20px;
+    color: white;
+}
+
+
+.get_recipes:focus {
+    background: rgba(57, 46, 34, 0.2);
+
+    box-shadow:         inset 0 0 5px rgba(0, 0, 0, 0.2), 
+                        0 1px 0 rgba(255, 255, 255, 0.7), 
+                        inset 0 1px 2px rgba(0, 0, 0, 0.4), 
+                        0 0 40px rgba(255, 255, 255, 0.5);
+    -moz-box-shadow:    inset 0 0 5px rgba(0, 0, 0, 0.2), 
+                        0 1px 0 rgba(255, 255, 255, 0.7), 
+                        inset 0 1px 2px rgba(0, 0, 0, 0.4), 
+                        0 0 40px rgba(255, 255, 255, 0.5);
+    -o-box-shadow:      inset 0 0 5px rgba(0, 0, 0, 0.2), 
+                        0 1px 0 rgba(255, 255, 255, 0.7), 
+                        inset 0 1px 2px rgba(0, 0, 0, 0.4), 
+                        0 0 40px rgba(255, 255, 255, 0.5);
+    -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2), 
+                        0 1px 0 rgba(255, 255, 255, 0.7), 
+                        inset 0 1px 2px rgba(0, 0, 0, 0.4), 
+                        0 0 40px rgba(255, 255, 255, 0.5);
+}				
+
+
+.get_recipes::-webkit-input-placeholder {
+	color: whitesmoke;
+	font-size: 20px;
+}
+
+.get_recipes:focus::-webkit-input-placeholder {
+	color: transparent;
+	font-size: 20px;
+}
+
+.get_recipes:-moz-placeholder { /* Firefox 18- */
+   color: whitesmoke;
+   font-size: 20px;  
+}
+
+.get_recipes:focus:-moz-placeholder {
+	color: transparent;
+	font-size: 20px;
+}
+
+.get_recipes::-moz-placeholder {  /* Firefox 19+ */
+   color: whitesmoke;
+   font-size: 20px;  
+}
+
+.get_recipes:focus::-moz-placeholder {
+	color: transparent;
+	font-size: 20px;
+}
+
+.get_recipes:-ms-input-placeholder {  
+   color: whitesmoke;
+   font-size: 20px;  
+}	
+
+.get_recipes:focus:-ms-input-placeholder {
+	color: transparent;
+	font-size: 20px;
+}
+
+span#form_submit a {
+	-webkit-box-shadow: rgba(0,0,0,0.2) 0 1px 0 0;   
+	-moz-box-shadow:rgba(0,0,0,0.2) 0 1px 0 0;   
+	box-shadow:rgba(0,0,0,0.2) 0 1px 0 0;   color: #E8DBDB;   
+	background-color: rgba(70, 63, 53, 0.56);   
+	border-radius:5px;   
+	-moz-border-radius:5px;  
+	-webkit-border-radius:5px;   
+	font-family:'Helvetica Neue',Arial,sans-serif;  
+	font-size: 30px;   
+	font-weight:700;   
+	height:32px;   
+	padding:4px 16px;  
+	border-color: red;border-width: 200px;
+}
