--- a/templates/PantryPal_app/base.html
+++ b/templates/PantryPal_app/base.html
@@ -86,16 +86,18 @@
 					
 						<h1 class="text-center main-color"> 
 							
-						<span style="font-family: serif; font-weight: 500; padding: 20px;">PANTRY PAL</span>
+						<span style="font-family: serif; font-weight: 500; padding: 20px; margin-top: 30px">PANTRY PAL</span>
 							<span class="visible-desktop">Helping you decide what to make and how to make it</span>
 							<form class="form-signin" id="user_form" method="POST" action="/PantryPal_app/">
             					{% csrf_token %}
 					            <!-- Display the search form elements here -->
 					            <br>
-					            <input type="text" size="50" name="query" value="" placeholder="Search recipes with your ingredients..." id="query" class="get_recipes">
-					            <br>
-					            <input type="number" size="50" name="time" value="" placeholder="Desired preparation time? (optional)" id="time" class="get_recipes">	
-					            <br>
+					            <div>
+					            	<input type="text" size="50" name="query" value="" placeholder="Search recipes with your ingredients..." id="query" class="get_recipes">
+					            </div>
+					            <div>
+					            	<input type="number" size="50" name="time" value="" placeholder="Desired preparation time? (optional)" id="time" class="get_recipes">
+					            </div>	
 					            <span id="form_submit"><a href="#features-section" style="display:;" onClick="$(this).closest('form').submit();">Search</a></span>
 					        </form>
 						
