--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1907,3 +1907,25 @@ span#form_submit a {
 	padding:4px 16px;  
 	border-color: red;border-width: 200px;
 }
+
+/*********************** DIRECTION ARROWS *****************************/
+
+.next {
+	position: absolute;
+	right: 5%;
+	padding-left: 20px;
+	padding-right: 20px;
+	display: inline-block;
+	background: #fff url(../img/png.png) top left repeat;
+	display: none;
+}
+
+.prev {
+	position: absolute;
+	left: 5%;
+	padding-left: 20px;
+	padding-right: 20px;
+	display: inline-block;
+	background: #fff url(../img/png.png) top left repeat;
+	display: none;
+}
