Update index view information

--- a/templates/PantryPal_app/index.html
+++ b/templates/PantryPal_app/index.html
@@ -62,25 +62,23 @@
         <!-- portfolio item -->
         <div class="span6  project-item graphics box">
              <h4 class="main-color-line">
-                <span class="white">
-                    <strong>INTRODUCING <span class="main-color">SCROLL&amp;STRAP</span></strong>  
+                <span class="lead" style="font-size: 30px; ">
+                    <strong>Let <span class="main-color">your creativity</span> have no bounds!</strong>  
                 </span>
             </h4>
                             
             <p class="lead">
-                We work really hard for build this awesome template!
-                We hope that this project will be appreciated by you and your customers!
+                PantryPal lets you take any of the ingredients you can find and make them into something amazing.
             </p>
             <p class="lead">
-                We work really hard for build this awesome template!
-                We hope that this project will be appreciated by you and your customers!
+                I need something to put her! Who knows! I will figure it out.
             </p>                  
                                 
             <p class="">                                
             
-                <a href="#" class="btn btn-action">
+                <a href="#faq" class="btn btn-action">
                     <i class="fa-icon-link"></i> 
-                    Visit project site
+                    Questions? Visit out faq
                 </a>
             </p>              
         </div><!-- END: portfolio item -->
