--- a/templates/PantryPal_app/base.html
+++ b/templates/PantryPal_app/base.html
@@ -95,6 +95,7 @@
 					            <div>
 					            	<input type="text" size="50" name="query" value="" placeholder="Search recipes with your ingredients..." id="query" class="get_recipes">
 					            </div>
+					            <div style="font-size: 20px; margin-bottom: 10px; color: black; text-shadow: 0 0px 0px #000000;">Ex: bread peanut_butter jelly</div>
 					            <div>
 					            	<input type="number" size="50" name="time" value="" placeholder="Desired preparation time? (optional)" id="time" class="get_recipes">
 					            </div>	
@@ -172,7 +173,7 @@
 					<div class="text-center page-header">
 						<h1 class="">
 							<span id="go_up" class="white">
-								<a href="#header-section" title="" style="text-decoration: initial">
+								<a href="#header-section" title="" style="text-decoration: initial; color: #f89406; text-shadow: 0 0px 4px #000000;">
 								  <i class="fa-icon-chevron-up fa-icon-medium" style="
 								    font-size: 50px;"></i>
 								</a>
@@ -497,6 +498,7 @@
 						
 					</div>
 				</div>
+
 			  </div>
 			  <!-- Carousel nav -->
 			  <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
