--- a/templates/PantryPal_app/base.html
+++ b/templates/PantryPal_app/base.html
@@ -48,7 +48,7 @@
     <div class="navbar navbar-static-top" id="topnavbar"> 
       <!-- navbar-fixed-top -->
       <div class="navbar-inner" id="navbartop">
-        <div class="container"> <a class="brand" href="index.html"> 
+        <div class="container"> <a class="brand" href="#"> 
 		<span>PantryPal</span>
 		<!--<img src="{% static "img/Logo.png" %}" alt="Logo">--></a>
           <div id="main-nav" class="scroller-spy">
@@ -197,7 +197,159 @@
 
 		</div>
 	</div><!-- / BG WRAPER-->
-</section>
+</section><!-- / RECIPES SECTION -->
+
+<section class="" id="team-section" style="background: white;">
+		<!-- TEAM HEADER-->
+	<div class="container">
+		<div class="row">
+			<header class="" >
+				<div class=" text-center page-header">
+				
+					<h3>
+					<span class="white" style="background: white;">
+					WHO IS  - 
+					<span class="main-color">PANTRYPAL</span> 
+					</span>
+					</h3>
+					
+				</div>
+			</header>
+		</div>
+	</div>
+	
+	<div class="container">	
+		<div class="row-fluid">
+		
+
+		
+
+
+<!-- ABOUT ITEM--><div class="span6">
+            
+		<!-- IMAGE CONTAINER-->
+            
+				<h3 class="main-color-line">About us</h3>
+				<p class="">
+					PantryPal was made by Brent Shulman, a sophmore studying Computer and Cognitive Science at the University of Pennsylvania. He is interested in Artificial Intelligence, Government Contracting, and Human-Computer Interaction. A native Californian, When he is not coding you can find this native southern Californian playing basketball or volleyball. Creative, inspired innovators, we are dedicated to developing long-term, honest, effective relationships with each of our clients, giving freely of our talent, experience, and expertise. We're not just a web design agency. We're not just a graphic design firm. We're not just coders and we're not just artists. 
+				</p>
+				
+				<h3 class="main-color-line">Our vision</h3>
+				<p class="">
+					We get better design when we understand our medium. Yet even at this late cultural hour, many people don't understand web design. Among them can be found some of our most distinguished business and cultural leaders, including a few who possess a profound grasp of design - except as it relates to the web.
+				</p>
+				
+				<h3 class="main-color-line">Our experience</h3>
+				<p class="">
+					What makes future of web design? Experience. We've been producing web design  for almost a decade, and are intimately familiar with the trends, technologies, and stars that make the web beautiful. 
+				</p>
+				
+		<!--END IMAGE CONTAINER-->
+			 
+		 <!-- CAPTION -->
+			
+	
+</div><!-- / ABOUT ITEM-->
+<!-- TEAM ITEM--><div class="thumbnail span3">
+            
+		<!-- IMAGE CONTAINER-->
+            <div class="sample project-item-image-container">
+				<img src="http://lorempixel.com/260/195/people/1" alt="">
+			 </div> 
+		<!--END IMAGE CONTAINER-->
+			 
+		 <!-- CAPTION -->
+			
+	<div class="caption">
+		<div class="transit-to-top">
+				
+			
+				<p class="caption-descr"><i class="fa-icon-quote-left main-color"></i>
+				AT FUTURE OF WEB DESIGN YOU'LL NOT ONLY SEE GREAT SITES, YOU'LL MEET AMAZING PEOPLE. PEOPLE LIKE YOU... <i class="fa-icon-quote-right main-color"></i>
+				</p>
+				<h4 class=""><strong>Joahna Doe</strong> - <small>talented designer</small></h4>	
+	<div class="widget_nav_menu"> 
+		<ul class="social-bottom">
+            <li><span class="badge badge-warning"><a href="#" title=""><i class="fa-icon-facebook"></i></a></span></li>
+			<li><span class="badge badge-warning"><a href="#" title=""><i class="fa-icon-twitter"></i></a></span></li>
+			<li><span class="badge badge-warning"><a href="#" title=""><i class="fa-icon-github-alt"></i></a></span></li>
+			<li><span class="badge badge-warning"><a href="#" title=""><i class="fa-icon-google-plus"></i></a></span></li>
+			<li><span class="badge badge-warning"><a href="#" title=""><i class="fa-icon-linkedin"></i></a></span></li>
+		</ul>
+						
+	</div>
+		</div> <!--END CAPTION -->
+	</div><!-- END: THUMBNAIL -->
+</div><!-- TEAM ITEM-->
+<!-- TEAM ITEM--><div class="thumbnail span3">
+            
+		<!-- IMAGE CONTAINER-->
+            <div class="sample project-item-image-container">
+				<img src="http://lorempixel.com/260/195/technics/1" alt="">
+			 </div> 
+		<!--END IMAGE CONTAINER-->
+			 
+		 <!-- CAPTION -->
+			
+	<div class="caption">
+		<div class="transit-to-top">
+				
+				<p class="caption-descr"><i class="fa-icon-quote-left main-color"></i>
+				COME BE INSPIRED BY THE EXPERIENCES AND SUCCESSES OF THE WEB DESIGNERS 
+				AMAZING PEOPLE WHO CREATE GREATE WEBSITES <i class="fa-icon-quote-right main-color"></i>
+				</p>
+				<h4 class=""><strong>John Doe</strong> - <small>great programmer</small></h4>
+	<div class="widget_nav_menu"> 
+		<ul class="social-bottom">
+            <li><span class="badge badge-warning"><a href="#" title=""><i class="fa-icon-facebook"></i></a></span></li>
+			<li><span class="badge badge-warning"><a href="#" title=""><i class="fa-icon-twitter"></i></a></span></li>
+			<li><span class="badge badge-warning"><a href="#" title=""><i class="fa-icon-github-alt"></i></a></span></li>
+			<li><span class="badge badge-warning"><a href="#" title=""><i class="fa-icon-google-plus"></i></a></span></li>
+			<li><span class="badge badge-warning"><a href="#" title=""><i class="fa-icon-linkedin"></i></a></span></li>
+		</ul>
+						
+	</div>
+		</div> <!--END CAPTION -->
+	</div><!-- END: THUMBNAIL -->
+</div><!-- TEAM ITEM-->
+		</div><!--/ROW FLUID--> 
+		
+		<div class="row-fluid">
+			<div class="span12 ">
+			<hr/>
+			<div class="page-header">
+				
+					<h3>
+					<span class="white">
+					SOME OF OUR <span class="main-color">CLIENTS</span> 
+					</span> 
+					</h3>
+					
+				</div>
+			</div>
+		</div>
+		<!-- CLIENTS-->
+			<div class="row-fluid">
+				<div class="client-logo thumbnail client-thumb">
+					<img src="{% static "img/logo_client.png" %}" alt="logo" />
+				</div>
+				<div class="client-logo thumbnail client-thumb">
+					<img src="{% static "img/logo_client.png" %}" alt="logo" />
+				</div>
+				<div class="client-logo thumbnail client-thumb">
+					<img src="{% static "img/logo_client.png" %}" alt="logo" />
+				</div>
+				<div class="client-logo thumbnail client-thumb">
+					<img src="{% static "img/logo_client.png" %}" alt="logo" />
+				</div>
+				<div class="client-logo thumbnail client-thumb">
+					<img src="{% static "img/logo_client.png" %}" alt="logo" />
+				</div>
+				
+			</div>
+		<!-- CLIENTS-->
+	</div><!--/CONTAINER-->
+</section><!-- /TEAM SECTION--> 
 	
 	<!-- /FEATURE section-->
 	
